--- a/lotus/templates/lotus/article/list.html
+++ b/lotus/templates/lotus/article/list.html
@@ -10,9 +10,9 @@
     <div class="list container">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
             {% for article in article_list %}
-            <div class="col">
-                {% include "lotus/article/item.html" with article_object=article %}
-            </div>
+                <div class="col">
+                    {% include "lotus/article/partials/item.html" with article_object=article from="article-list" %}
+                </div>
             {% endfor %}
         </div>
     </div>
