--- a/lotus/templates/lotus/category/partials/item.html
+++ b/lotus/templates/lotus/category/partials/item.html
@@ -1,8 +1,10 @@
-{% load i18n %}{% spaceless %}
+{% load i18n smart_image %}{% spaceless %}
 <a href="{{ category_object.get_absolute_url }}" class="category card h-100 text-decoration-none text-reset">
     {% if category_object.cover %}
-        <img src="{{ category_object.cover.url }}" class="cover card-img-top" alt="">
+        {% media_thumb category_object.cover "300x200" crop="center" as cover_thumb %}
+        <img src="{{ cover_thumb.url }}" class="cover card-img-top" alt="">
     {% endif %}
+
     <div class="card-body">
         <h2 class="title h5 card-title">{{ category_object.title }}</h2>
         <div class="description card-text">{{ category_object.description }}</div>
