--- a/sandbox/templates/skeleton.html
+++ b/sandbox/templates/skeleton.html
@@ -16,7 +16,7 @@
 <div class="d-grid gap-3 p-3">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/{{ LANGUAGE_CODE }}/">{% trans "Lotus weblog" %}</a>
+            <a class="navbar-brand" href="/">{% trans "Lotus weblog" %}</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar-toggler" aria-controls="main-navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
