--- a/lotus/templates/admin/lotus/article/change_form.html
+++ b/lotus/templates/admin/lotus/article/change_form.html
@@ -91,6 +91,7 @@ NOTE:
     {% if change %}
         {% if not is_popup %}
             {% translation_siblings original preview=True as sibling_stats %}
+            {% check_object_lang_availability original as object_lang_availability %}
 
             <ul class="object-tools">
                 {% block object-tools-items %}
@@ -108,9 +109,15 @@ NOTE:
                 {% endblock %}
             </ul>
 
+            {% if not object_lang_availability.is_available %}
+            <p class="lotus-language-availability errornote">
+                {% blocktranslate with object_lang=original.language available_langs=object_lang_availability.language_keys|join:", " %}<strong>Article language '{{ object_lang }}' is not in available project languages: {{ available_langs }}</strong>. In this state, this article won't reachable from your site.<br><br>You may be able to edit this article but it will change language to an available one and you may have to change some related fields.{% endblocktranslate %}
+            </p>
+            {% endif %}
+
             {% if sibling_stats.siblings %}
             <p class="lotus-siblings-resume"><em>
-                {% blocktrans %}Existing language(s) for this article:{% endblocktrans %}
+                {% blocktranslate %}Existing language(s) for this article:{% endblocktranslate %}
                 {% for sibling in sibling_stats.siblings %}
                     {% get_language_info for sibling.language as lang %}
                     <a href="{% url opts|admin_urlname:'change' sibling.pk %}" data-lotus-langcode="{{ sibling.language }}">{{ lang.name_translated }}</a>
