--- a/lotus/templates/lotus/author/detail.html
+++ b/lotus/templates/lotus/author/detail.html
@@ -1,7 +1,7 @@
 {% extends "lotus/base.html" %}
 {% load i18n %}
 
-{% block head_title %}{{ author_object }}{% endblock head_title %}
+{% block header-title %}{{ author_object }}{% endblock header-title %}
 
 {% block lotus_content %}{% spaceless %}
 <div class="author-detail">
