--- a/lotus/templates/lotus/category/list.html
+++ b/lotus/templates/lotus/category/list.html
@@ -1,7 +1,7 @@
 {% extends "lotus/base.html" %}
 {% load i18n %}
 
-{% block head_title %}{% trans "Categories" %}{% endblock head_title %}
+{% block header-title %}{% trans "Categories" %}{% endblock header-title %}
 
 {% block lotus_content %}{% spaceless %}
 <div class="category-list-container">
