--- a/lotus/templates/lotus/tag/detail.html
+++ b/lotus/templates/lotus/tag/detail.html
@@ -1,7 +1,7 @@
 {% extends "lotus/base.html" %}
 {% load i18n %}
 
-{% block head_title %}{{ tag_object }}{% endblock head_title %}
+{% block header-title %}{{ tag_object }}{% endblock header-title %}
 
 {% block lotus_content %}{% spaceless %}
 <div class="tag-detail">
