--- a/lotus/templates/lotus/category/partials/siblings.html
+++ b/lotus/templates/lotus/category/partials/siblings.html
@@ -1,9 +1,16 @@
-{% spaceless %}
+{% load i18n %}{% spaceless %}
     {% if siblings %}
         <ul class="category-siblings list-group list-group-flush">
             {% for category in siblings %}
                 <li class="sibling list-group-item">
                     <a href="{{ category.get_absolute_url }}">{{ category.language }}</a>
+                    <span class="badge text-bg-light fw-normal">
+                        {% if not category.original %}
+                            {% translate "Is original" %}
+                        {% else %}
+                            {% translate "Is not original" %}
+                        {% endif %}
+                    </span>
                 </li>
             {% endfor %}
         </ul>
