[NEW] Added new template tag 'article_get_related' that is able to properly filter related article queryset and use it in article detail template

--- a/lotus/templates/lotus/article/detail.html
+++ b/lotus/templates/lotus/article/detail.html
@@ -166,20 +166,19 @@
                     {% endif %}
                 {% endwith %}
 
-                {% with relateds=article_object.get_related %}
-                    {% if relateds %}
-                        <div class="relateds card mb-4">
-                            <div class="card-header">
-                                <strong>{% trans "Related articles" %}</strong>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                {% for related in relateds %}
-                                <li class="list-group-item"><a href="{{ related.get_absolute_url }}">{{ related.title }}</a></li>
-                                {% endfor %}
-                            </ul>
+                {% article_get_related article_object as relateds %}
+                {% if relateds %}
+                    <div class="relateds card mb-4">
+                        <div class="card-header">
+                            <strong>{% trans "Related articles" %}</strong>
                         </div>
-                    {% endif %}
-                {% endwith %}
+                        <ul class="list-group list-group-flush">
+                            {% for related in relateds %}
+                            <li class="list-group-item"><a href="{{ related.get_absolute_url }}">{{ related.title }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
