--- a/sandbox/templates/skeleton.html
+++ b/sandbox/templates/skeleton.html
@@ -11,6 +11,8 @@
     {% block header-resource %}
     <link href="{% static "css/main.css" %}" rel="stylesheet">
     {% endblock header-resource %}
+    {% block header-resource-extra %}
+    {% endblock header-resource-extra %}
 {% endspaceless %}
 </head>
 
