--- a/frontend/scss/settings/_bootstrap.scss
+++ b/frontend/scss/settings/_bootstrap.scss
@@ -5,3 +5,5 @@
 // original path copied from "bootstrap-icons" Sass source
 $bootstrap-icons-font-src: url("../fonts/icons/bootstrap-icons.woff2?a97b3594ad416896e15824f6787370e0") format("woff2"),
 url("../fonts/bootstrap-icons.woff?a97b3594ad416896e15824f6787370e0") format("woff") !default;
+
+$enable-cssgrid: true;
