--- a/lotus/templates/lotus/category/partials/item.html
+++ b/lotus/templates/lotus/category/partials/item.html
@@ -7,7 +7,7 @@
 
     <div class="card-body">
         <h2 class="title h5 card-title">{{ category_object.title }}</h2>
-        <div class="description card-text">{{ category_object.description }}</div>
+        <div class="description card-text">{{ category_object.description|safe }}</div>
     </div>
 </a>
 {% endspaceless %}
